@@ -391,7 +391,6 @@ class TestIssues:
             yaml.safe_load('{]')
 
     def test_issue_234(self):
-        import ruamel.yaml
         from ruamel.yaml import YAML
 
         inp = dedent("""\
@@ -404,7 +403,6 @@ class TestIssues:
         """)
         yaml = YAML(typ='safe', pure=True)
         data = yaml.load(inp)
-        # data = ruamel.yaml.safe_load(inp)
         fold = data[0]['cmd']
         print(repr(fold))
         assert '\a' not in fold
