@@ -1,3 +1,7 @@
+[0, 15, 66]: 2018-09-07
+  - fix issue with fold indicating characters inserted in safe_load-ed folded strings
+    (reported by `Maximilian Hils <https://bitbucket.org/mhils/>`__).
+
 [0, 15, 65]: 2018-09-07
   - fix issue #232 revert to throw ParserError for unexcpected ``]``
     and ``}`` instead of IndexError. (Issue reported and PR with fix
